# docs/swagger.json
@@ -8,7 +8,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "127.0.0.1:8080",
     "basePath": "/",
     "paths": {
         "/api/containers": {
@@ -303,6 +303,34 @@
                 }
             }
         },
+        "/api/transportations/user_confirm": {
+            "put": {
+                "description": "Сформировать или удалить перевозку перевозку пользователем",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Перевозки"
+                ],
+                "summary": "Сформировать перевозку",
+                "parameters": [
+                    {
+                        "description": "подтвердить",
+                        "name": "confirm",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "boolean"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/api/transportations/{transportation_id}": {
             "get": {
                 "description": "Возвращает подробную информацию о перевозке и её составе",
@@ -435,41 +463,6 @@
                     "Перевозки"
                 ],
                 "summary": "Подтвердить перевозку",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "id перевозки",
-                        "name": "transportation_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "подтвердить",
-                        "name": "confirm",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "boolean"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
-        "/api/transportations/{transportation_id}/user_confirm": {
-            "put": {
-                "description": "Сформировать или удалить перевозку перевозку пользователем",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Перевозки"
-                ],
-                "summary": "Сформировать перевозку",
                 "parameters": [
                     {
                         "type": "string",
